--- a/locales/zh/messages.json
+++ b/locales/zh/messages.json
@@ -11,7 +11,6 @@
   "voice_settings": "音色设定",
   "voice_placeholder": "请输入对应的音色要求，每行一个音色，例如：\n温和专业的中性声音\n富有激情的年轻声音\n沉稳可信的成熟声音",
   "voice_info": "定义每个角色的音色特征",
-  "language": "语言",
   "generate_btn": "🎙️ 生成播客",
   "generation_results": "生成结果",
   "podcast_script": "播客脚本",
@@ -24,12 +23,10 @@
   "refresh_history": "刷新历史",
   "advanced_settings": "高级设置",
   "about_listenpub": "关于 ListenPub",
-  "chinese": "中文",
-  "english": "英文",
   "feature_character_title": "角色定制",
   "feature_character_desc": "自定义播客中的角色人设，打造独特的人物个性和表达风格",
-  "feature_voice_title": "音色定制",
-  "feature_voice_desc": "为每个角色设定专属音色，实现高度契合的声音表现",
+  "feature_voice_title": "场景定制",
+  "feature_voice_desc": "设定播客的场景模式和呈现形式，打造符合主题的对话氛围",
   "feature_interaction_title": "自然互动",
   "feature_interaction_desc": "多角色间自然交流互动，呈现真实的播客对话场景",
   "api_key_placeholder": "请输入您的 OpenAI API 密钥",
@@ -46,20 +43,20 @@
   "feature_ai": "🤖 AI智能生成：利用先进的大语言模型生成高质量播客内容",
   "feature_fast": "⚡ 快速生成：几分钟内完成从文本到音频的全流程制作",
   "feature_formats": "🎭 角色扮演：支持多角色自然互动，定制化人设和音色",
-  "feature_multilang": "🌍 多语言支持：支持中文和英文内容生成",
+  "feature_multilang": "🎯 专业中文：专注中文播客内容，本土化体验",
   "feature_responsive": "📱 响应式设计：适配各种设备屏幕，随时随地创作",
   "usage_steps": "使用步骤",
   "step1": "1. **输入主题**：描述您想要创建播客的主题或内容",
   "step2": "2. **设定角色**：定义播客中的角色人设和对应的音色特征",
-  "step3": "3. **设置语言**：选择播客的输出语言",
+  "step3": "3. **选择风格**：选择适合的场景模式和声音风格",
   "step4": "4. **点击生成**：AI将自动生成播客脚本和音频",
   "step5": "5. **预览结果**：查看生成的脚本内容和音频文件",
   "step6": "6. **下载分享**：下载音频文件或分享播客链接",
   "tech_stack": "技术栈",
   "tech_frontend": "🎨 前端界面：Gradio + 自定义CSS样式",
-  "tech_ai": "🧠 AI引擎：OpenAI GPT + ElevenLabs语音合成",
+  "tech_ai": "🧠 AI引擎：混元模型 + CosyVoice语音合成",
   "tech_backend": "⚙️ 后端服务：Python + FastAPI",
-  "version_info": "**版本**: v1.0.0 | **最后更新**: 2024年12月",
+  "version_info": "",
   "script_title": "播客标题：{topic}",
   "script_characters": "角色设定：",
   "script_voices": "音色配置：",
@@ -68,7 +65,7 @@
   "opening_text": "欢迎收听今天的播客！今天我们将探讨「{topic}」这个话题。本期节目采用{style_description}的形式，为您带来精彩内容。",
   "script_content": "内容大纲：",
   "script_language": "播客语言：",
-  "language_text": "本播客将使用{language}进行讲述",
+  "language_text": "本播客使用中文进行讲述",
   "script_ending": "结尾：",
   "ending_text": "感谢您的收听！如果您喜欢本期内容，欢迎订阅我们的播客，我们下期再见！",
   "audio_generated": "音频已生成！预计时长：{duration}，角色数量：{num_characters}个",
@@ -76,6 +73,6 @@
   "generation_failed_short": "播客生成失败",
   "no_history": "暂无生成历史",
   "history_title": "## 播客生成历史\n\n",
-  "history_item": "{index}. **{topic}** ({characters}个角色) - {duration} - {language} - {timestamp}\n   角色：{character_settings}\n   音色：{voice_settings}\n\n",
+  "history_item": "{index}. **{topic}** ({characters}个角色) - {duration} - 中文 - {timestamp}\n   角色：{character_settings}\n   音色：{voice_settings}\n\n",
   "unknown": "未知"
 }
